--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -2,6 +2,9 @@ version: '3.8'
 
 services:
     merchandise-service:
+      build:
+        context: ../
+        dockerfile: ./common/Dockerfile
       image: merchandise-service
       hostname: merchandise-service
       ports:
@@ -10,26 +13,18 @@ services:
     stock-api:
       image: "ghcr.io/ozon-edu-csharp-2021/stock-api:main"
       hostname: stock-api
-      ports:
-        - "8081:80"
 
     emailing-service:
       image: "ghcr.io/ozon-edu-csharp-2021/emailing-service:main"
       hostname: emailing-service
-      ports:
-        - "8082:80"
 
     employees-service:
       image: "ghcr.io/ozon-edu-csharp-2021/employees-service:main"
       hostname: employees-service
-      ports:
-        - "8083:80"
 
     supply-service:
       image: "ghcr.io/ozon-edu-csharp-2021/supply-service:main"
       hostname: supply-service
-      ports:
-        - "8084:80"
     
 
 
